--- a/src/app/hero/hero.component.html
+++ b/src/app/hero/hero.component.html
@@ -76,15 +76,16 @@
 <section class="timetable">
     <div class="timetable-container">
         <div class="timetable-head">
-            <span id="calendar"><i class="bx bxs-chalkboard"></i></span>
+            <!-- <span id="calendar"><i class="bx bxs-chalkboard"></i></span> -->
             <h2>Timetable</h2>
+            <span>Your timetable in one place.</span>
         </div>
         <div class="accessories-container">
-            <img id="phone" src="" alt="">
-            <img id="desktop" src="" alt="">
-            <img id="watch" src="" alt="">
+            <!-- <img id="phone" src="" alt=""> -->
+            <img id="desktop" src="assets/lectures.png" alt="">
+            <!-- <img id="watch" src="" alt=""> -->
         </div>
-        <div class="timetble"></div>
+        <!-- <div class="timetble"></div> -->
     </div>
 </section>
 
@@ -132,3 +133,18 @@
         <div class="conversation-cards"> <img src="" alt=""></div>
     </div>
 </div> -->
+
+<div class="not">
+    <div class="not-conta">
+        <span>Alert</span>
+        <span>Login and some other contents have been disabled due to ongoing developements. Click <a href=""><b href="#getStarted">'Get Started'</b></a> to register with us and Android users can download and use the app by clicking on the 
+            <a href="#gettheapp"><b>'Get the app'</b></a> button above. Other platforms shall be ready soon.</span>
+    </div>
+</div>
+
+<footer>
+    <!-- <div class="top">
+        span.title
+    </div> -->
+    <div class="cpryt"><span>&copy;Copyright 2023  <a href="">PePa Tech</a></span> </div>
+</footer>
